Refactor user service filters and services to use AWS SDK v2; remove unused imports and methods
- Updated UserPhoneFilter and UserSkillFilter to remove unused Stream import.
- Commented out the userHasRequiredSkills method in EventService.
- Changed DiceBearService to use fromUriString instead of fromHttpUrl for URL building.
- Refactored S3Service to use AWS SDK v2, including changes to methods for uploading and generating presigned URLs.
- Updated AvatarS3Service to use AWS SDK v2 for S3 operations.
- Refactored GoalService to remove unnecessary NotNull annotations and added null checks.
- Updated tests to reflect changes in S3Service and other services, including using the new AWS SDK v2 methods.
- Removed unnecessary SQL truncate statements from drop.sql.
- Added application-test.yaml for test configuration.