@@ -1,15 +1,17 @@
 package school.faang.user_service.service.external;
 
-import com.amazonaws.SdkClientException;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.GeneratePresignedUrlRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import school.faang.user_service.exception.S3Exception;
+import software.amazon.awssdk.core.exception.SdkException;
+import software.amazon.awssdk.services.s3.presigner.S3Presigner;
+import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
+import software.amazon.awssdk.services.s3.presigner.model.PresignedGetObjectRequest;
 
+import java.net.URI;
 import java.net.URL;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,7 +26,7 @@ import static org.mockito.Mockito.when;
 class AvatarS3ServiceTest {
 
     @Mock
-    private AmazonS3 amazonS3Client;
+    private S3Presigner s3Presigner;
 
     @InjectMocks
     private S3Service s3Service;
@@ -34,19 +36,21 @@ class AvatarS3ServiceTest {
     @Test
     void getUnexpiredUrl_ShouldReturnPresignedUrl() throws Exception {
         String fileId = "test-file.jpeg";
-        URL expectedUrl = new URL("http://localhost/test-file.jpeg");
-        when(amazonS3Client.generatePresignedUrl(any(GeneratePresignedUrlRequest.class))).thenReturn(expectedUrl);
+        URL expectedUrl = URI.create("http://localhost/test-file.jpeg").toURL();
+        PresignedGetObjectRequest presignedRequest = org.mockito.Mockito.mock(PresignedGetObjectRequest.class);
+        when(s3Presigner.presignGetObject(any(GetObjectPresignRequest.class))).thenReturn(presignedRequest);
+        when(presignedRequest.url()).thenReturn(expectedUrl);
 
         URL actualUrl = s3Service.getUnexpiredUrl(bucketName, fileId);
 
         assertEquals(expectedUrl.toString(), actualUrl.toString());
-        verify(amazonS3Client, times(1)).generatePresignedUrl(any(GeneratePresignedUrlRequest.class));
+        verify(s3Presigner, times(1)).presignGetObject(any(GetObjectPresignRequest.class));
     }
 
     @Test
     void getUnexpiredUrl_ShouldThrowS3Exception_WhenGenerationFails() {
         String fileId = "test-file.jpeg";
-        doThrow(SdkClientException.class).when(amazonS3Client).generatePresignedUrl(any(GeneratePresignedUrlRequest.class));
+        doThrow(SdkException.class).when(s3Presigner).presignGetObject(any(GetObjectPresignRequest.class));
 
         S3Exception exception = assertThrows(S3Exception.class, () -> s3Service.getUnexpiredUrl(bucketName, fileId));
         assertEquals("Error generating presigned URL", exception.getMessage());
